Entire re-work on solucion chapter
Signed-off-by: Ariel D'Alessandro <ariel@vanguardiasur.com.ar>

--- a/all.bib
+++ b/all.bib
@@ -821,3 +821,34 @@
 	pages={117--118},
 	year={2012}
 }
+
+@conference {Quigley:etal:ICRA09,
+	title = {{ROS: an open-source Robot Operating System}},
+	booktitle = {ICRA Workshop on Open Source Software},
+	year = {2009},
+	attachments = {http://www.willowgarage.com/sites/default/files/icraoss09-ROS.pdf},
+	author = {Morgan Quigley and Ken Conley and Brian P. Gerkey and Josh Faust and Tully Foote and Jeremy Leibs and Rob Wheeler and Andrew Y. Ng}
+}
+
+@article{bradski2000opencv,
+	title={{The opencv library}},
+	author={Bradski, Gary and others},
+	journal={Doctor Dobbs Journal},
+	volume={25},
+	number={11},
+	pages={120--126},
+	year={2000},
+	publisher={M AND T PUBLISHING INC}
+}
+
+@INPROCEEDINGS{rusu2011pcl,
+	author={R. B. Rusu and S. Cousins},
+	booktitle={2011 IEEE International Conference on Robotics and Automation},
+	title={3D is here: Point Cloud Library (PCL)},
+	year={2011},
+	pages={1--4},
+	doi={10.1109/ICRA.2011.5980567},
+	ISSN={1050-4729},
+	month={May},
+}
+
