--- a/preamble.tex
+++ b/preamble.tex
@@ -16,6 +16,7 @@
 
 % Declare projection as math function
 \DeclareMathOperator{\proj}{proj}
+\DeclareMathOperator{\disp}{disp}
 \newcommand{\worldCoordSystem}{\mathrm{w}}
 \newcommand{\cameraCoordSystem}{\mathrm{c}}
 \newcommand{\point}{\vec{x}}
@@ -72,6 +73,7 @@
 \newcommand{\ind}[1]{\scalebox{0.7}[0.7]{$#1$}}
 
 \newcommand{\keyframe}{\vec{K}}
+\newcommand{\pointCloud}{\vec{M}}
 \newcommand{\bowVector}{\vec{v}}
 \newcommand{\lcError}{\vec{\Omega}}
 \newcommand{\relativeTransformation}{\seMatrix}
