--- a/trabajo_relacionado.lyx
+++ b/trabajo_relacionado.lyx
@@ -269,10 +269,9 @@ status collapsed
 \begin_layout Plain Layout
 \align center
 \begin_inset Graphics
-	filename images/trabajo-relacionado/slam-problem-no-variables.pdf
+	filename images/trabajo-relacionado/slam-problem-no-variables.svg
 	lyxscale 30
 	width 60text%
-	rotateAngle 270
 
 \end_inset
 
@@ -406,10 +405,9 @@ status collapsed
 \begin_layout Plain Layout
 \align center
 \begin_inset Graphics
-	filename images/trabajo-relacionado/level7_lc.pdf
+	filename images/trabajo-relacionado/level7_lc.svg
 	lyxscale 30
 	width 80text%
-	rotateAngle 270
 
 \end_inset
 
@@ -1371,10 +1369,9 @@ status collapsed
 \begin_layout Plain Layout
 \align center
 \begin_inset Graphics
-	filename images/trabajo-relacionado/semantic_categories.pdf
+	filename images/trabajo-relacionado/semantic_categories.svg
 	lyxscale 50
 	scale 50
-	rotateAngle 270
 
 \end_inset
 
