--- a/all.bib
+++ b/all.bib
@@ -426,7 +426,7 @@
 	acmid={2783476},
 	publisher={ACM},
 	address={New York, NY, USA},
-} 
+}
 
 @Inbook{toldo2008robust,
 	author={Toldo, Roberto and Fusiello, Andrea},
@@ -470,7 +470,7 @@
 	acmid={358692},
 	publisher={ACM},
 	address={New York, NY, USA},
-} 
+}
 
 @INPROCEEDINGS{newcombe2010live,
 	author={Newcombe, Richard and Davison, Andrew},
@@ -723,7 +723,7 @@
 	acmid={2528333},
 	publisher={Sage Publications, Inc.},
 	address={Thousand Oaks, CA, USA},
-} 
+}
 
 @INPROCEEDINGS{engel2015large,
 	author={Engel, Jakob and St{\"u}ckler, J{\"o}rg and Cremers, Daniel},
@@ -852,3 +852,80 @@
 	month={May},
 }
 
+@article{Lowe::IJCV04,
+	year={2004},
+	issn={0920-5691},
+	journal={International Journal of Computer Vision},
+	volume={60},
+	number={2},
+	doi={10.1023/B:VISI.0000029664.99615.94},
+	title={{Distinctive Image Features from Scale-Invariant Keypoints}},
+	publisher={Kluwer Academic Publishers},
+	author={Lowe, David G.},
+	pages={91--110},
+	language={English}
+}
+
+@incollection{Bay:etal:ECCV06,
+	year={2006},
+	isbn={978-3-540-33832-1},
+	booktitle={Proceedings of the European Conference on Computer Vision (ECCV)},
+	volume={3951},
+	series={Lecture Notes in Computer Science},
+	doi={10.1007/11744023_32},
+	title={{SURF: Speeded Up Robust Features}},
+	url={http://dx.doi.org/10.1007/11744023_32},
+	publisher={Springer Berlin Heidelberg},
+	author={Bay, Herbert and Tuytelaars, Tinne and Van Gool, Luc},
+	pages={404--417},
+	language={English}
+}
+
+@INPROCEEDINGS{Rublee:etal:ICCV11,
+	author={Rublee, Ethan and Rabaud, Vincent and Konolige, Kurt and Bradski, Gary},
+	booktitle={Proceedings of the IEEE International Conference on Computer Vision (ICCV)},
+	title={{ORB: An efficient alternative to SIFT or SURF}},
+	year={2011},
+	month={November},
+	pages={2564--2571},
+	doi={10.1109/ICCV.2011.6126544},
+	ISSN={1550-5499}
+}
+
+@inproceedings{Alcantarilla:etal:ECCV12,
+	author = {Alcantarilla, Pablo Fern{\'a}ndez and Bartoli, Adrien and Davison, Andrew J.},
+	title = {{KAZE Features}},
+	booktitle = {Proceedings of the 12th European Conference on Computer Vision - Volume Part VI},
+	series = {Proceedings of the European Conference on Computer Vision (ECCV)},
+	year = {2012},
+	isbn = {978-3-642-33782-6},
+	location = {Florence, Italy},
+	pages = {214--227},
+	numpages = {14},
+	url = {http://dx.doi.org/10.1007/978-3-642-33783-3_16},
+	doi = {10.1007/978-3-642-33783-3_16},
+	acmid = {2403222},
+	publisher = {Springer-Verlag},
+	address = {Berlin, Heidelberg}
+}
+
+@inproceedings{Alcantarilla:etal:BMVC13,
+	author = {Alcantarilla, Pablo F. and Nuevo, Jesus and Bartoli, Adrien},
+	title = {{Fast Explicit Diffusion for Accelerated Features in Nonlinear Scale Spaces}},
+	booktitle = {Proceedings of the British Machine Vision Conference (BMVC)},
+	location = {Bristol, UK},
+	year = {2013},
+	publisher = {BMVA Press},
+	editors={Burghardt, Tilo and Damen, Dima and Mayol-Cuevas, Walterio and Mirmehdi, Majid}
+}
+
+@INPROCEEDINGS{Shi:Tomasi:CVPR94,
+	author={Shi, Jianbo and Tomasi, Carlo},
+	booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
+	title={{Good features to track}},
+	year={1994},
+	month={June},
+	pages={593--600},
+	doi={10.1109/CVPR.1994.323794},
+	ISSN={1063-6919}
+}
