--- a/solucion.lyx
+++ b/solucion.lyx
@@ -200,14 +200,15 @@ correspondientes a
 placement h
 wide false
 sideways false
-status collapsed
+status open
 
 \begin_layout Plain Layout
 \align center
 \begin_inset Graphics
-	filename images/metodo_propuesto/metodo-diagram.dia
+	filename images/metodo_propuesto/metodo-diagram.pdf
 	lyxscale 30
 	width 70page%
+	rotateAngle 270
 
 \end_inset
 
